[package]
name = "license"
version = "0.1.0"
authors = ["Andrew Duda <dudanian@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
default = ["curl-get"]
curl-get = ["curl"]
reqwest-get = ["reqwest"]
ureq-get = ["ureq"]

[dependencies]
clap = "2.33.2"
directories = "3.0.1"

# optional features
curl = { version = "0.4.14", optional = true }
reqwest = { version = "0.10.7", optional = true, features = ["blocking"]}
ureq = { version = "1.3.0", optional = true }